events page updated

--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -49,6 +49,56 @@
                     <li class="location">Bridgeton High School - 111 West Ave N, Bridgeton, NJ 08302</li>
                 </ul>
             </div>
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Republican Breakfast ***Different Location***</strong></li>
+                    <li class="description">Bi-weekly event where county residents can speak with Republican candidates in person.</li>
+                    <li class="date-and-time">10/7/23 - 8:30am</li>
+                    <li class="location">Mauricetown Fire Company - 9544 Noble Street Mauricetown, NJ</li>
+                </ul>
+            </div>
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Commissioner Work Session Meeting</strong></li>
+                    <li class="description">Meetings where County Commissioners vote on current legislation. Time is given for county residents to comment publicly.</li>
+                    <li class="date-and-time">10/10/23 - 6pm</li>
+                    <li class="location">Administration Bldg - 164 W. Broad St. Bridgeton, NJ</li>
+                    <li><a href="https://www.cumberlandcountynj.gov/meetings">Meeting Info on County Calendar</a></li>
+                </ul>
+            </div>
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>American Voices Radio Show</strong></li>
+                    <li class="description">Radio Show on 92.1 FM that discusses County and State level politics.</li>
+                    <li class="date-and-time">10/14/23 - 11am</li>
+                    <li class="location">Radio Show - Tune into Cruisin 92.1 FM</li>
+                </ul>
+            </div>
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Republican Breakfast</strong></li>
+                    <li class="description">Bi-weekly event where county residents can speak with Republican candidates in person.</li>
+                    <li class="date-and-time">10/21/23 - 8:30 am</li>
+                    <li class="location">Eastlyn Golf Course - 4049 Italia Ave, Vineland NJ 08361</li>
+                </ul>
+            </div>
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Regular Commissioner Board Meeting</strong></li>
+                    <li class="description">Meetings where County Commissioners vote on current legislation. Time is given for county residents to comment publicly.</li>
+                    <li class="date-and-time">10/24/23 - 6pm</li>
+                    <li class="location">Cumberland County Courthouse - 60 W. Broad Street, Courtroom 312, Bridgeton, NJ 08302</li>
+                    <li><a href="https://www.cumberlandcountynj.gov/meetings">Meeting Info on County Calendar</a></li>
+                </ul>
+            </div>
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Republican Breakfast</strong></li>
+                    <li class="description">Bi-weekly event where county residents can speak with Republican candidates in person.</li>
+                    <li class="date-and-time">11/4/23 - 8:30am</li>
+                    <li class="location">Eastlyn Golf Course - 4049 Italia Ave, Vineland NJ 08361</li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
