--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
                         Our journey to advocate for improved community engagement, transparency, and
                         accountability has been long but is a shared responsibility—one that should be easier to
                         undertake, but often isn&#39;t.</li>
+                    <li class="ss-li"><strong><a href="child_pages/cc-elections/unanswered_questions.html">Unanswered Questions: </a></strong>While Inform The Vote has made many attempts to contact candidates for 
+                    further information, we are still left with several unanswered questions.</li>
                 </ul>
             </div>
         </div>
