--- a/child_pages/cc-elections/cc_election_candidates.html
+++ b/child_pages/cc-elections/cc_election_candidates.html
@@ -39,6 +39,7 @@
     <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
     <div id="sample-ballot">
         <div class="sb-top-box"> 
+            <h3>ELECTION DATE: November 7th, 2023</h3>
             <h2>SAMPLE BALLOT</h2>
             <p class="instructions">( Click or tap on candidate name to learn more about them )</p>
             <h4>DEMOCRATIC</h4>
