changed catalyze to establish in mission statement

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="main-content-box-with-shadow">
             <h4 class="ms-heading">Mission Statement</h4>
             <div class="ms-content">
-                &quot;At Inform the Vote, our mission is to catalyze a new standard of civic engagement by
+                &quot;At Inform the Vote, our mission is to establish a new standard of civic engagement by
                 equipping you—the citizen—with thoroughly researched, unbiased, and easily digestible
                 information. We believe an empowered citizenry is the cornerstone of a transparent and
                 accountable local government. Yet, in an era where this should be the norm, both
