Added link to cumberland county public meetings on Get Involved page

--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -81,10 +81,11 @@
                                 </li>
                                 <li class="gi-ul-li">
                                     <strong>Casual County Events:</strong> Events like Deerfield Day give you a chance to interact with candidates, even if the main focus isn't on the upcoming election. However, these events are often poorly advertised, which we hope to change. 
-                                    <a href="https://explorecumberlandnj.com/calendar/">Visit the Cumberland County Event Calendar for more info.</a>
+                                    <a href="https://explorecumberlandnj.com/calendar/">Visit the Cumberland County 4H Event Calendar for more info.</a>
                                 </li>
                                 <li class="gi-ul-li">
                                     <strong>Miscellaneous County Department Meetings:</strong> These meetings can offer a deeper dive into the workings of the county. While they may not directly relate to the upcoming election, they provide context for larger political issues and can be beneficial for those with extra time and curiosity.
+                                    <a href="https://www.cumberlandcountynj.gov/meetings">Visit the Cumberland County public meetings calendar for more info.</a>
                                 </li>
                             </ul>
                         </li>
