content edit on about page, hope section

--- a/child_pages/about.html
+++ b/child_pages/about.html
@@ -126,8 +126,8 @@
                     </div>
                 <h3 class="op-subheading">Hope</h3>
                     <div class="op-section">
-                        Thankfully, I thought of contacting the mayor, who was actually accessible,
-                        communicative, and helpful, as opposed to the candidates. He understood the need to
+                        Thankfully, I thought of contacting the mayor, who was accessible,
+                        communicative, and helpful. He understood the need to
                         reach out to the political parties and request more accessibility. This led to the
                         republican party reaching out to me to suggest their website, which I already knew
                         about and was insufficient. However, I remembered they had an upcoming bi-weekly
