--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=REM:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,600;1,700&family=Roboto+Mono&display=swap" rel="stylesheet">
+    <script src="../app.js" async></script>
     <title>Inform The Vote</title>
 </head>
 <body>
@@ -38,6 +39,8 @@
 
     <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
 
+    <!--Event dates must follow an 8 character format, example: 09/09/23-->
+
     <div class="container">
         <div class="main-content-with-box-shadow-events">
             <h1 class="events-h1">Events</h1>
@@ -53,7 +56,7 @@
                 <ul class="event-info">
                     <li class="name"><strong>Republican Breakfast ***Different Location***</strong></li>
                     <li class="description">Bi-weekly event where county residents can speak with Republican candidates in person.</li>
-                    <li class="date-and-time">10/7/23 - 8:30am</li>
+                    <li class="date-and-time">10/17/23 - 8:30am</li>
                     <li class="location">Mauricetown Fire Company - 9544 Noble Street Mauricetown, NJ</li>
                 </ul>
             </div>
@@ -95,7 +98,7 @@
                 <ul class="event-info">
                     <li class="name"><strong>Republican Breakfast</strong></li>
                     <li class="description">Bi-weekly event where county residents can speak with Republican candidates in person.</li>
-                    <li class="date-and-time">11/4/23 - 8:30am</li>
+                    <li class="date-and-time">11/04/23 - 8:30am</li>
                     <li class="location">Eastlyn Golf Course - 4049 Italia Ave, Vineland NJ 08361</li>
                 </ul>
             </div>
