typography edits for unanswered questions

--- a/child_pages/cc-elections/unanswered_questions.html
+++ b/child_pages/cc-elections/unanswered_questions.html
@@ -42,15 +42,17 @@
         <div class="main-content-with-box-shadow-ua">
             <h1 class="ua-h1">Unanswered Questions</h1>
             <div class="ua-short-description">
-                Welcome to our &quot;Unanswered Questions&quot; section, a culmination of extensive research
-highlighting the glaring gaps in election-related information provided by our county. These
+                <p>Welcome to our &quot;Unanswered Questions&quot; section, a culmination of extensive research
+highlighting the glaring gaps in election-related information provided by our county. </p>
+                <p>These
 queries aren’t propelled by partisan interests but are genuine, good-faith inquiries arising from
 observed ambiguities—reflecting concerns any discerning voter might encounter. These
 questions underscore the information void that remains to be filled for voters to make truly
 informed decisions. The intention is to shed light on these unanswered aspects, fostering a
-more transparent, informed, and engaged electorate. We encourage all visitors to reflect on
+more transparent, informed, and engaged electorate.</p>
+                 <p>We encourage all visitors to reflect on
 these questions, seek answers, and engage in dialogues to uncover the intricacies of our
-electoral system and reinforce the integrity of our democratic processes.
+electoral system and reinforce the integrity of our democratic processes.</p>
             </div>
             <div class="ua-content">
                 <P>1. Who is Charles Laspata, the Democrat candidate for State Senator? Did he literally ‘ghost’ the
