--- a/child_pages/cc-elections/Candidates/acevedo.html
+++ b/child_pages/cc-elections/Candidates/acevedo.html
@@ -53,7 +53,7 @@
         <h4 class="sub-heading">Website</h4>
         <div class="website">
             <a href="https://acevedoforsurrogate.com/" target="_blank" rel="noopener noreferrer" class="website-link">https://acevedoforsurrogate.com/</a>
-            <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">https://cumberlandnjdems.com/elections/our-democratic-candidates/</a>
+            <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland Democrats Site</a>
         </div>
         <h3 class="sub-heading">agenda</h3>
             <div class="agenda-thesis">
@@ -63,7 +63,7 @@
             </div>
             <h4 class="sub-heading">party messaging</h4>
             <div class="agenda-per-party-site">
-                <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">https://cumberlandnjdems.com/elections/our-democratic-candidates/</a>
+                <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland Democrats Site</a>
             </div>
             <h4 class="sub-heading">POLICY POSITIONS</h4>
             <div class="policy-positions">
