--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -52,7 +52,7 @@
     <div class="candidate-agenda">
         <h4 class="sub-heading">Website</h4>
         <div class="website">
-            <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">https://cumberlandnjdems.com/elections/our-democratic-candidates/</a>
+            <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland Democrats Site</a>
         </div>
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
