--- a/child_pages/cc-elections/Candidates/taylor.html
+++ b/child_pages/cc-elections/Candidates/taylor.html
@@ -52,7 +52,7 @@
     <div class="candidate-agenda">
         <h4 class="sub-heading">Website</h4>
         <div class="website">
-            <a href="https://www.ccrrogop.org/cumberlandcountycommissioners" target="_blank" rel="noopener noreferrer" class="website-link">https://www.ccrrogop.org/cumberlandcountycommissioners</a>
+            <a href="https://www.ccrrogop.org/cumberlandcountycommissioners" target="_blank" rel="noopener noreferrer" class="website-link">CCROGOP Site</a>
         </div>
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
