--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -87,11 +87,38 @@
             </div>
             <div class="event-card">
                 <ul class="event-info">
+                    <li class="name"><strong>Atlantic County Meet & Greet</strong></li>
+                    <li class="description">Event posted by Mike Testa on Facebook. "Meet us at Estell Manor Park in Atlantic County and let's make memories as we discuss our vision for a brighter future". Follow the link to the post to RSVP, where an internal link under the 'tickets' section is provided.</li>
+                    <li class="date-and-time">10/23/23 - 6pm</li>
+                    <li class="location">Estell Manor Park, 109 NJ-50, Mays Landing, NJ 08330</li>
+                    <li><a href="https://www.facebook.com/events/699714028317537?ref=newsfeed">Facebook Event Link</a></li>
+                </ul>
+            </div>
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Taco Tuesday at Milly's</strong></li>
+                    <li class="description">Event posted by Mike Testa on Facebook. "Join us at Milly's for "Taco Tuesday"". Follow the link to the post to RSVP, where an internal link under the 'tickets' section is provided.</li>
+                    <li class="date-and-time">10/24/23 - 6pm</li>
+                    <li class="location">Milly's Restaurant, 602 E. Chestnut Ave, Vineland, NJ 08360</li>
+                    <li><a href="https://www.facebook.com/events/197128753402195/?ref=newsfeed">Facebook Event Link</a></li>
+                </ul>
+            </div>
+            <div class="event-card">
+                <ul class="event-info">
                     <li class="name"><strong>Regular Commissioner Board Meeting</strong></li>
                     <li class="description">Meetings where County Commissioners vote on current legislation. Time is given for county residents to comment publicly.</li>
                     <li class="date-and-time">10/24/23 - 6pm</li>
                     <li class="location">Cumberland County Courthouse - 60 W. Broad Street, Courtroom 312, Bridgeton, NJ 08302</li>
                     <li><a href="https://www.cumberlandcountynj.gov/meetings">Meeting Info on County Calendar</a></li>
+                </ul>
+            </div>
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Scoops and Politics</strong></li>
+                    <li class="description">An event posted by Mike Testa on Facebook. This MIGHT be a chance to meet incumbents Simonsen and Mclellan. Follow info at Facebook event link to RSVP, which is provided under the tickets section.</li>
+                    <li class="date-and-time">Thursday, November 2nd. 6pm - 8pm</li>
+                    <li class="location">800 Ocean Ave, Ocean City, NJ 08226</li>
+                    <li><a href="https://www.facebook.com/events/340466595067196?ref=newsfeed">Facebook Event Link</a></li>
                 </ul>
             </div>
             <div class="event-card">
