added election day event

--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -129,6 +129,14 @@
                     <li class="location">Eastlyn Golf Course - 4049 Italia Ave, Vineland NJ 08361</li>
                 </ul>
             </div>
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Vote! Or don't...</strong></li>
+                    <li class="description">Election day. If you feel you have enough info, go vote.</li>
+                    <li class="date-and-time">11/07/23</li>
+                    <li class="location">Wherever your voting location is.</li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
