eddie bonners twitter/x

--- a/child_pages/cc-elections/Candidates/bonner.html
+++ b/child_pages/cc-elections/Candidates/bonner.html
@@ -54,6 +54,7 @@
         <div class="website">
             <a href="https://www.cmcdems.com/bonner" target="_blank" rel="noopener noreferrer" class="website-link">https://www.cmcdems.com/bonner</a>
             <a href="https://www.facebook.com/ld1njvote" target="_blank" rel="noopener noreferrer" class="website-link">https://www.facebook.com/ld1njvote</a>
+            <a href="https://x.com/EddieLBonnerSr1?t=fhMw1kde0aNvFpLr8PBeNw&s=09" target="_blank" rel="noopener noreferrer" class="website-link">Twitter/X</a>
         </div>
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
