relabeled some websites as names instead of urls

--- a/child_pages/cc-elections/Candidates/white-morris.html
+++ b/child_pages/cc-elections/Candidates/white-morris.html
@@ -52,10 +52,10 @@
     <div class="candidate-agenda">
             <h4 class="sub-heading">Website</h4>
             <div class="website">
-                <a href="https://damitaforassemblynj.com/" target="_blank" rel="noopener noreferrer" class="website-link">https://damitaforassemblynj.com/</a>
-                <a href="https://www.cmcdems.com/whitemorris" target="_blank" rel="noopener noreferrer" class="website-link">https://www.cmcdems.com/whitemorris</a>
-                <a href="https://www.facebook.com/ld1njvote" target="_blank" rel="noopener noreferrer" class="website-link">https://www.facebook.com/ld1njvote</a>
-                <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">https://cumberlandnjdems.com/elections/our-democratic-candidates/</a>
+                <a href="https://damitaforassemblynj.com/" target="_blank" rel="noopener noreferrer" class="website-link">Personal Campaign Site</a>
+                <a href="https://www.cmcdems.com/whitemorris" target="_blank" rel="noopener noreferrer" class="website-link">Cape May County Democrats</a>
+                <a href="https://www.facebook.com/ld1njvote" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
+                <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland County Democrats</a>
             </div>
             <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
