--- a/child_pages/cc-elections/Candidates/bonner.html
+++ b/child_pages/cc-elections/Candidates/bonner.html
@@ -52,8 +52,8 @@
     <div class="candidate-agenda">
         <h4 class="sub-heading">Website</h4>
         <div class="website">
-            <a href="https://www.cmcdems.com/bonner" target="_blank" rel="noopener noreferrer" class="website-link">https://www.cmcdems.com/bonner</a>
-            <a href="https://www.facebook.com/ld1njvote" target="_blank" rel="noopener noreferrer" class="website-link">https://www.facebook.com/ld1njvote</a>
+            <a href="https://www.cmcdems.com/bonner" target="_blank" rel="noopener noreferrer" class="website-link">Cape May County Democrats</a>
+            <a href="https://www.facebook.com/ld1njvote" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
             <a href="https://x.com/EddieLBonnerSr1?t=fhMw1kde0aNvFpLr8PBeNw&s=09" target="_blank" rel="noopener noreferrer" class="website-link">Twitter/X</a>
             <a href="https://www.instagram.com/ebonner82/?hl=en" target="_blank" rel="noopener noreferrer" class="website-link">Instagram</a>
         </div>
