relabeled a site on acevedos page

--- a/child_pages/cc-elections/Candidates/acevedo.html
+++ b/child_pages/cc-elections/Candidates/acevedo.html
@@ -52,7 +52,7 @@
     <div class="candidate-agenda">
         <h4 class="sub-heading">Website</h4>
         <div class="website">
-            <a href="https://acevedoforsurrogate.com/" target="_blank" rel="noopener noreferrer" class="website-link">https://acevedoforsurrogate.com/</a>
+            <a href="https://acevedoforsurrogate.com/" target="_blank" rel="noopener noreferrer" class="website-link">Personal Campaign Site</a>
             <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland Democrats Site</a>
         </div>
         <h3 class="sub-heading">agenda</h3>
