--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -52,7 +52,9 @@
     <div class="candidate-agenda">
         <h4 class="sub-heading">Website</h4>
         <div class="website">
-            <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland Democrats Site</a>
+            <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland County Democrats Site</a>
+            <a href="https://www.facebook.com/johnnycaps" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
+            <a href="https://www.instagram.com/jcapizola/?hl=en" target="_blank" rel="noopener noreferrer" class="website-link">Instagram</a>
         </div>
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
