larae smith facebook

--- a/child_pages/cc-elections/Candidates/smith.html
+++ b/child_pages/cc-elections/Candidates/smith.html
@@ -51,7 +51,8 @@
     <div class="candidate-agenda">
         <h4 class="sub-heading">Website</h4>
         <div class="website">
-            <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland Democrats Site</a>
+            <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland County Democrats Site</a>
+            <a href="https://www.facebook.com/larae.smith.125/?locale=et_EE" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
         </div>
         <h3 class="sub-heading">individual agenda</h3>
             <div class="agenda-thesis">
