perellas social media

--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -52,8 +52,11 @@
     <div class="candidate-agenda">
         <h4 class="sub-heading">Website</h4>
         <div class="website">
-            <a href="https://drperellaforcumberland.com/" target="_blank" rel="noopener noreferrer" class="website-link">https://drperellaforcumberland.com/</a>
-            <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland Democrats Site</a>
+            <a href="https://drperellaforcumberland.com/" target="_blank" rel="noopener noreferrer" class="website-link">Personal Campaign Site</a>
+            <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland County Democrats Site</a>
+            <a href="https://www.facebook.com/dr.perellaforcumberland" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
+            <a href="https://www.instagram.com/drperellaforcumberland/?hl=en" target="_blank" rel="noopener noreferrer" class="website-link">Instagram</a>
+            <a href="https://twitter.com/DrJoeighPerella" target="_blank" rel="noopener noreferrer" class="website-link">Twitter</a>
         </div>
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
