testas social media

--- a/child_pages/cc-elections/Candidates/testa.html
+++ b/child_pages/cc-elections/Candidates/testa.html
@@ -52,7 +52,11 @@
     <div class="candidate-agenda">
             <h4 class="sub-heading">Website</h4>
             <div class="website">
-                <a href="https://testafornj.com/" target="_blank" rel="noopener noreferrer" class="website-link">https://testafornj.com/</a>
+                <a href="https://testafornj.com/" target="_blank" rel="noopener noreferrer" class="website-link">Personal Campaign Site</a>
+                <a href="https://www.ccrrogop.org/newjersey-senate" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland County Republicans Site</a>
+                <a href="https://www.facebook.com/TestaForNJ" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
+                <a href="https://www.instagram.com/testa4senate/?hl=en" target="_blank" rel="noopener noreferrer" class="website-link">Instagram</a>
+                <a href="https://twitter.com/TestaForNJ?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank" rel="noopener noreferrer" class="website-link">Twitter/X</a>
             </div>
             <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
