simonsens social media

--- a/child_pages/cc-elections/Candidates/simonsen.html
+++ b/child_pages/cc-elections/Candidates/simonsen.html
@@ -52,7 +52,11 @@
     <div class="candidate-agenda">
         <h4 class="sub-heading">Website</h4>
         <div class="website">
-            <a href="https://www.ccrrogop.org/newjersey-assembly" target="_blank" rel="noopener noreferrer" class="website-link">https://www.ccrrogop.org/newjersey-assembly</a>
+            <a href="https://www.ccrrogop.org/newjersey-assembly" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland County Republicans Site</a>
+            <a href="https://www.facebook.com/AsmSimo43" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
+            <a href="https://www.instagram.com/simotwelve01/?hl=en" target="_blank" rel="noopener noreferrer" class="website-link">Instagram</a>
+            <a href="https://twitter.com/eriksimonsene?lang=en" target="_blank" rel="noopener noreferrer" class="website-link">Twitter/X</a>
+            <a href="https://en.wikipedia.org/wiki/Erik_K._Simonsen" target="_blank" rel="noopener noreferrer" class="website-link">Wikipedia</a>
         </div>
         <h4 class="sub-heading">agenda</h4>
             <div class="agenda-thesis">
