mcclellans social media

--- a/child_pages/cc-elections/Candidates/mcclellan.html
+++ b/child_pages/cc-elections/Candidates/mcclellan.html
@@ -52,7 +52,9 @@
     <div class="candidate-agenda">
         <h4 class="sub-heading">Website</h4>
         <div class="website">
-            <a href="https://www.ccrrogop.org/newjersey-assembly" target="_blank" rel="noopener noreferrer" class="website-link">https://www.ccrrogop.org/newjersey-assembly</a>
+            <a href="https://www.ccrrogop.org/newjersey-assembly" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland County Republicans Site</a>
+            <a href="https://www.facebook.com/AssemblymanMcClellan/" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
+            <a href="https://instagram.com/mcclellanantwan?igshid=MmU2YjMzNjRlOQ==" target="_blank" rel="noopener noreferrer" class="website-link">Instagram</a>
         </div>
         <h4 class="sub-heading">INDIVIDUAL agenda</h4>
             <div class="agenda-thesis">
