--- a/child_pages/cc-elections/Candidates/donato.html
+++ b/child_pages/cc-elections/Candidates/donato.html
@@ -52,7 +52,9 @@
     <div class="candidate-agenda">
         <h4 class="sub-heading">Website</h4>
         <div class="website">
-            <a href="https://www.ccrrogop.org/sheriff" target="_blank" rel="noopener noreferrer" class="website-link">https://www.ccrrogop.org/sheriff</a>
+            <a href="https://www.ccrrogop.org/sheriff" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland County Republicans Site</a>
+            <a href="https://www.facebook.com/michael.donato.1460/" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
+            <a href="https://instagram.com/mike17donato?igshid=MmU2YjMzNjRlOQ==" target="_blank" rel="noopener noreferrer" class="website-link">Instagram</a>
         </div>
         <h3 class="sub-heading">individual agenda</h3>
             <div class="agenda-thesis">
