--- a/child_pages/cc-elections/Candidates/luisi.html
+++ b/child_pages/cc-elections/Candidates/luisi.html
@@ -52,7 +52,8 @@
     <div class="candidate-agenda">
         <h4 class="sub-heading">Website</h4>
         <div class="website">
-            <a href="https://www.ccrrogop.org/cumberlandcountysurrogate2023" target="_blank" rel="noopener noreferrer" class="website-link">CCROGOP Site</a>
+            <a href="https://www.ccrrogop.org/cumberlandcountysurrogate2023" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland County Republicans Site</a>
+            <a href="https://www.facebook.com/profile.php?id=100091592796359" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
         </div>
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
