scoops and politics date format fixed

--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -116,7 +116,7 @@
                 <ul class="event-info">
                     <li class="name"><strong>Scoops and Politics</strong></li>
                     <li class="description">An event posted by Mike Testa on Facebook. This MIGHT be a chance to meet incumbents Simonsen and Mclellan. Follow info at Facebook event link to RSVP, which is provided under the tickets section.</li>
-                    <li class="date-and-time">Thursday, November 2nd. 6pm - 8pm</li>
+                    <li class="date-and-time">11/02/23 6pm - 8pm</li>
                     <li class="location">800 Ocean Ave, Ocean City, NJ 08226</li>
                     <li><a href="https://www.facebook.com/events/340466595067196?ref=newsfeed">Facebook Event Link</a></li>
                 </ul>
