womens sports commit cleanup

--- a/child_pages/cc-elections/Candidates/testa.html
+++ b/child_pages/cc-elections/Candidates/testa.html
@@ -100,7 +100,7 @@
                             </li>
                         </ol>
                     </li>
-                    <li>Wants to preserve separation of women's and men's sports. Gleaned from a repost on<a href="https://twitter.com/EdTheTruckerNJ/status/1710255861644279874" target="_blank" rel="noopener noreferrer" class="website-link">Twitter/X</a> Twitter/X. </li>
+                    <li>Wants to preserve separation of women's and men's sports. Gleaned from a repost on<a href="https://twitter.com/EdTheTruckerNJ/status/1710255861644279874" target="_blank" rel="noopener noreferrer" class="website-link"> Twitter/X.</a></li>
                 </ul>
             </div>
             <h4 class="sub-heading">party messaging</h4>
