--- a/child_pages/cc-elections/Candidates/simonsen.html
+++ b/child_pages/cc-elections/Candidates/simonsen.html
@@ -59,8 +59,9 @@
             <a href="https://en.wikipedia.org/wiki/Erik_K._Simonsen" target="_blank" rel="noopener noreferrer" class="website-link">Wikipedia</a>
         </div>
         <h4 class="sub-heading">agenda</h4>
+
             <div class="agenda-thesis">
-                
+                Supports parents rights to make decisions about their children's health and wellness.<a href="https://twitter.com/TestaForNJ/status/1709190819075309773" target="_blank" rel="noopener noreferrer" class="website-link"> Twitter/X</a>
             </div>
             <h4 class="sub-heading">party messaging</h4>
             <div class="agenda-per-party-site">
