anti-corruption post for testas page

--- a/child_pages/cc-elections/Candidates/testa.html
+++ b/child_pages/cc-elections/Candidates/testa.html
@@ -103,6 +103,7 @@
                     <li>Wants to preserve separation of women's and men's sports. Gleaned from a repost on<a href="https://twitter.com/EdTheTruckerNJ/status/1710255861644279874" target="_blank" rel="noopener noreferrer" class="website-link"> Twitter/X.</a></li>
                     <li>Unapolagetically supports law enforcement.<a href="https://twitter.com/TestaForNJ/status/1709561534458778042" target="_blank" rel="noopener noreferrer" class="website-link"> Twitter/X</a></li>
                     <li>Supports parents rights to make decisions about their children's health and wellness.<a href="https://twitter.com/TestaForNJ/status/1709190819075309773" target="_blank" rel="noopener noreferrer" class="website-link"> Twitter/X</a></li>
+                    <li>Wants to root out corruption in New Jersey government.<a href="https://twitter.com/TestaForNJ/status/1707806852963094917" target="_blank" rel="noopener noreferrer" class="website-link"> Twitter/X</a></li>
                 </ul>
             </div>
             <h4 class="sub-heading">party messaging</h4>
