economics detail added to wind shore concerns on testas page

--- a/child_pages/cc-elections/Candidates/testa.html
+++ b/child_pages/cc-elections/Candidates/testa.html
@@ -96,7 +96,7 @@
                     <li>Protect marine life
                         <ol>
                             <li>
-                                Pause off-shore wind projects until more data can be collected on its effects on marine life
+                                Pause off-shore wind projects until more data can be collected on its effects on marine life. There are also issues regarding the <a href="https://abcnews.go.com/amp/Business/wireStory/offshore-wind-projects-federal-built-governors-biden-103234443" target="_blank" rel="noopener noreferrer" class="website-link"> economics</a> of the project.
                             </li>
                         </ol>
                     </li>
