testas pro gun rights twitter post

--- a/child_pages/cc-elections/Candidates/testa.html
+++ b/child_pages/cc-elections/Candidates/testa.html
@@ -87,7 +87,7 @@
                             <li>Invest in addiction and treatment centers to treat the addiction crisis</li>
                         </ol>
                     </li>
-                    <li>Protect gun rights</li>
+                    <li>Protect gun rights <a href="https://twitter.com/TestaForNJ/status/1701987113493823657" target="_blank" rel="noopener noreferrer" class="website-link"> Twitter/X</a></li>
                     <li>Against abortion extremism
                         <ol>
                             <li>Pro-life with exceptions for rape, incest, and life of the mother</li>
